# rust-microkit-demo

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md  banscii.system  banscii.system.template  banscii_zcu102.system  rust-toolchain.toml  test.py  update.sh
.cargo/: config.toml
.github/workflows/: main.yaml  main.yml  push.yaml
.reuse/: dep5
crates/artist/: Cargo.toml
crates/assistant/: Cargo.toml
crates/assistant/src/: main.rs
crates/eth-client/: Cargo.toml
crates/eth-client/src/: main.rs
crates/eth-driver/: Cargo.toml
crates/eth-driver/interface/: Cargo.toml
crates/eth-driver/interface/src/: lib.rs  ring-buffer.rs  ringbuffer.rs
crates/eth-driver/src/: main.rs
crates/ethernet-interface-types/: Cargo.toml
crates/ethernet-interface-types/src/: lib.rs  ringbuffer.rs
crates/pl011-driver/: Cargo.toml
crates/pl011-driver/interface-types/: Cargo.toml
crates/pl011-driver/src/: device.rs  main.rs
crates/serial-driver/: Cargo.toml
crates/uart-driver/: Cargo.toml  Makefile  build.rs  libuartps.c  uartps.c
crates/uart-driver/c_src/: xuartps_selftest.c
crates/uart-driver/c_src/common/: xil_io.h  xil_printf.h  xplatform_info.c
crates/uart-driver/src/: device.rs  main.rs
crates/uart-interface-types/: Cargo.toml
crates/uart-interface-types/src/: lib.rs
docker/: Dockerfile  Makefile
