[package]
name = "banscii-assistant"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
banscii-artist-interface-types = { path = "../artist/interface-types" }
banscii-assistant-core = { path = "./core" }
uart-interface-types = { path = "../uart-interface-types" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
sel4cp = { git = "https://github.com/coliasgroup/rust-seL4", rev = "0997c8d54426d590a59b9894bfac9d47d804188e", default-features = false, features = ["alloc"] }
embedded-hal = "0.2"
