[package]
name = "banscii-assistant"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
sel4cp = { workspace = true, features = ["alloc"] }

banscii-artist-interface-types = { path = "../artist/interface-types" }
banscii-assistant-core = { path = "./core" }
uart-interface-types = { path = "../uart-interface-types" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
embedded-hal = "0.2"
