[package]
name = "banscii-assistant"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
banscii-artist-interface-types = { path = "../artist/interface-types" }
banscii-assistant-core = { path = "./core" }
banscii-pl011-driver-interface-types = { path = "../pl011-driver/interface-types" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
sel4-microkit-message = { git = "https://github.com/coliasgroup/rust-sel4" }

[dependencies.sel4-externally-shared]
git = "https://github.com/coliasgroup/rust-sel4"
features = ["unstable", "alloc"]

[dependencies.sel4-microkit]
git = "https://github.com/coliasgroup/rust-sel4"
default-features = false
features = ["alloc"]
