[package]
name = "eth-client"
version = "0.1.0"
authors = ["Ben Hamlin <hamlinb@galois.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
eth-driver-interface = { path = "../eth-driver/interface" }
sel4cp = { git = "https://github.com/coliasgroup/rust-seL4", rev = "0997c8d54426d590a59b9894bfac9d47d804188e", default-features = false }
sel4-shared-ring-buffer = { git = "https://github.com/protoben/rust-seL4", rev = "58ae0cfe5cf7a5c8dc13f315062ec94dee784c47", default-features = false }
smoltcp = { version = "0.10.0", default-features = false, features = ["log","proto-ipv4","socket-tcp","medium-ethernet","medium-ip"] }
