[package]
name = "eth-client"
version = "0.1.0"
authors = ["Ben Hamlin <hamlinb@galois.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
sel4cp.workspace = true
sel4-shared-ring-buffer.workspace = true

eth-driver-interface = { path = "../eth-driver/interface" }
smoltcp = { version = "0.10.0", default-features = false, features = ["log","proto-ipv4","socket-tcp","medium-ethernet","medium-ip"] }
