[package]
name = "banscii-eth-driver"
version = "0.1.0"
authors = ["Ben Hamlin <hamlinb@galois.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
banscii-eth-driver-interface = { path = "./interface" }
sel4cp = { git = "https://github.com/coliasgroup/rust-seL4", default-features = false }
