[package]
name = "banscii-eth-driver"
version = "0.1.0"
authors = ["Ben Hamlin <hamlinb@galois.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
banscii-eth-driver-interface = { path = "./interface" }
sel4cp = { git = "https://github.com/coliasgroup/rust-seL4", rev = "0997c8d54426d590a59b9894bfac9d47d804188e", default-features = false }
