[package]
name = "uart-driver"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
sel4cp.workspace = true

uart-interface-types = { path = "../uart-interface-types" }
heapless = "0.7.16"
tock-registers = "0.8.1"
embedded-hal = "0.2"
nb = "1.0"
