[package]
name = "uart-interface-types"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
num_enum = { version = "0.5.9", default-features = false }
zerocopy = "0.6.1"
heapless = "0.7.16"
sel4cp = { git = "https://github.com/coliasgroup/rust-seL4", rev = "0997c8d54426d590a59b9894bfac9d47d804188e", default-features = false }
embedded-hal = "0.2"
nb = "1.0"
