[package]
name = "banscii-eth-driver-interface"
version = "0.1.0"
authors = ["Ben Hamlin <hamlinb@galois.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
num_enum = { version = "0.5.9", default-features = false }
zerocopy = "0.6.1"
heapless = "0.7.16"
smoltcp = { version = "0.10.0", default-features = false, features = ["proto-ipv4","medium-ethernet","socket-raw"] }
sel4cp = { git = "https://github.com/coliasgroup/rust-seL4", default-features = false }
