[package]
name = "eth-driver-interface"
version = "0.1.0"
authors = ["Ben Hamlin <hamlinb@galois.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
sel4cp.workspace = true
sel4-shared-ring-buffer.workspace = true

smoltcp = { version = "0.10.0", default-features = false, features = ["proto-ipv4","medium-ethernet","socket-raw"] }
